# snowtool

./: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
api-comparison/: analyze.py  fetch.py  findings.md  independent.py
docs/: configuration.md  hooks.py  index.md  installation.md  usage.md  walkthrough.md
docs/deployment/: windows-iis.md
docs/internals/: architecture.md  configuration.md  ingest.md  on-disk-layout.md  pourpoints.md  provenance.md  queries.md  stats.md  zone-generation.md  zones.md
docs/reference/: cli.md  http-api.html  http-api.md  python-api.md
docs/superpowers/specs/: 2026-07-12-snodas-api-comparison-design.md
src/snowtool/: __init__.py  __main__.py  cli.py  exceptions.py  settings.py  types.py
src/snowtool/api/: app.py  dependencies.py  exceptions.py  problems.py  request_state.py  settings.py  tags.py
src/snowtool/api/models/: aoi.py  dataset.py  download.py  downloads.py  ledger.py  link.py  pourpoint.py  root.py  stats.py
src/snowtool/api/routers/: _stats_params.py  aois.py  datasets.py  pourpoints.py  root.py  stats.py  stats_compact.py
src/snowtool/cli/: __init__.py  _confirm.py  _console.py  _context.py  _datasets.py  _dates.py  _path_env.py  _progress.py  _remote.py  _render.py  _windows_common.py  aoi.py  api.py  backlog.py  dataset.py  doctor.py  download.py  iis.py  migration.py  pourpoint.py  query.py  report.py  root.py  snowdb.py  stats.py  version.py  windows.py
src/snowtool/cli/_iis/: __init__.py  install_site.ps1  provisioning.py  remove_site.ps1  web_config.py
src/snowtool/migration/: aoi_tags.py  restructure.py  stamp.py
src/snowtool/rasterdb/: aoi.py  constants.py  db.py  elevation_band.py  fileinfo.py  grid.py  input_rasters.py  raster.py  raster_collection.py  zonal_stats.py
src/snowtool/snowdb/: _pourpoint_ops.py  aoi.py  aoi_index.py  aoi_raster.py  atomic.py  cog.py  config.py  constants.py  coverage.py  dataset.py  datasets.py  db.py  dem_source.py  diagnostics.py  elevation_band.py  geometry.py  grid.py  ingest.py  input_rasters.py  landcover.py  landcover_generate.py  landcover_source.py  manager.py  manager_pourpoints.py  pourpoint.py  pourpoint_index.py  pourpoint_manager.py  pourpoint_ops.py  pourpoint_remote.py  progress.py  provenance.py  query.py  raster.py  raster_collection.py  reader.py  response_models.py  spec.py  terrain.py  terrain_generate.py  tiff_cache.py  (+7 more)
src/snowtool/snowdb/datasets/: __init__.py  instarr.py  snodas-nodata-mask.tif  snodas.py  swann-nodata-mask.tif  swann.py
src/snowtool/snowdb/raster/: __init__.py  cog.py  collection.py  tiff_cache.py  tiled.py
src/snowtool/snowdb/zones/: generate_common.py  landcover.py  landcover_generate.py  landcover_layers.py  landcover_source.py  parallel.py  terrain.py  terrain_generate.py  terrain_layers.py  terrain_source.py  zone_layer.py  zone_layer_providers.py  zoning.py
tests/: conftest.py  test_types.py
tests/api/: conftest.py  openapi_snapshot.json  test_aois.py  test_datasets.py  test_openapi.py  test_openapi_snapshot.py  test_pourpoints.py  test_root.py  test_settings.py  test_stats.py  test_stats_compact.py
tests/cli/: conftest.py  test_aoi_cli.py  test_api_cli.py  test_confirm.py  test_console.py  test_context.py  test_dataset_cli.py  test_dates.py  test_doctor_cli.py  test_pourpoint_cli.py  test_progress.py  test_query_cli.py  test_remote.py  test_remote_network.py  test_render.py  test_report_cli.py  test_root_cli.py  test_snowdb_cli.py  test_snowdb_init_cli.py  test_stats_cli.py  test_windows_cli.py
tests/migration/: test_aoi_tags.py  test_restructure.py  test_stamp.py
tests/rasterdb/: conftest.py  test_elevation_band.py  test_grid.py  test_pipeline.py  test_tiff_cache.py  test_zonal_stats.py
tests/snowdb/: _engine_harness.py  conftest.py  test_aoi_index.py  test_aoi_ops.py  test_atomic.py  test_config.py  test_coverage.py  test_dataset_config.py  test_dataset_queries.py  test_db.py  test_dem_source.py  test_dem_source_network.py  test_diagnostics.py  test_elevation_band.py  test_grid.py  test_ingest.py  test_instarr.py  test_landcover.py  test_landcover_generate.py  test_landcover_source.py  test_manager.py  test_nodata_mask.py  test_parallel.py  test_pipeline.py  test_pourpoint_index.py  test_pourpoint_manager.py  test_pourpoint_ops.py  test_pourpoint_remote.py  test_pourpoint_remote_network.py  test_projected_area.py  test_provenance.py  test_query.py  test_reader.py  test_report_diagnostics.py  test_response_models.py  test_snodas.py  test_spec.py  test_swann.py  test_terrain.py  test_terrain_generate.py  (+8 more)
