[project]
name = 'snowtool'
description = 'Snow analysis tool for basin forecasting'
readme = 'README.md'
requires-python = '==3.14.*'
dynamic = [
    'version',
]
dependencies = [
    "affine>=2.4.0",
    "async-lru>=2.3.0",
    "async-tiff>=0.7.2",
    "click>=8.2.1",
    "fastapi>=0.116.1",
    "gazebo[fastapi,geojson,uvicorn]>=0.9.0",
    "geojson-pydantic>=2.1.1",
    "griffine[crs]>=0.2.0",
    "numpy>=2.5.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "rasterio>=1.5.0",
    "shapely>=2.1.2",
    "uvicorn[standard]>=0.50.0",
]

[project.scripts]
snowtool = "snowtool.__main__:cli"

[build-system]
requires = [
    "hatchling",
    "hatch-vcs",
]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/snowtool/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/snowtool"]

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = [
    'B',
    'BLE',
    'C4',
    'C90',
    'COM',
    'DTZ',
    'E',
    'ERA',
    'F',
    'FA',
    'G',
    'I',
    'INP',
    'N',
    'NPY',
    'PT',
    'PTH',
    'RET',
    'RUF',
    'S',
    'SIM',
    'T20',
    'UP',
    'W',

]
exclude = ['docs/**/*']

[tool.ruff.lint.per-file-ignores]
'__init__.py' = ['E402']
'tests/**/*' = ['T201', 'S101']

[tool.ruff.lint.isort]
lines-between-types = 1

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
]

[tool.mypy]
ignore_missing_imports = true
scripts_are_modules = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = 'function'
filterwarnings = [
    'error',
    # rasterio 1.5.0's Cython read path sets ``arr.shape`` directly, which NumPy
    # 2.5 deprecated; it fires on every raster read and is not ours to fix. Narrowly
    # ignored (message + category) so our own warnings stay failures. Drop this once
    # rasterio ships a NumPy-2.5-clean release (or pin numpy<2.5).
    'ignore:Setting the shape on a NumPy array has been deprecated:DeprecationWarning',
]
addopts = [
    "--cov=snowtool",
    "--import-mode=importlib",
    # Network tests (real S3) are opt-in: run them with `pytest -m network`.
    "-m",
    "not network",
]
markers = [
    "network: test reaches the public internet (deselected by default)",
]
testpaths = 'tests'

[tool.coverage.report]
show_missing = true
skip_empty = true
sort = "Cover"

[dependency-groups]
dev = [
    "gazebo[test]>=0.9.0",
    "httpx2>=2.5.0",
    "mypy>=1.18.1",
    "pre-commit-hooks>=6.0.0",
    "prek>=0.4.8",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.0",
]
docs = [
    "mkdocs-material>=9.5.0",
    "mkdocs-click>=0.8.1",
    "mkdocstrings[python]>=1.0.4",
]
